--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel="manifest" href="manifest.json">
+ <!-- Manifest -->
+<link rel="manifest" href="manifest.json">
+
+<!-- Favicon/Icons -->
 <link rel="icon" href="icons/icon-192.png" type="image/png">
+
+<!-- Theme Color -->
 <meta name="theme-color" content="#ffffff">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
