--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
- <!-- Manifest -->
-<link rel="manifest" href="manifest.json">
-
-<!-- Favicon/Icons -->
-<link rel="icon" href="icons/icon-192.png" type="image/png">
-
-<!-- Theme Color -->
-<meta name="theme-color" content="#ffffff">
+<link rel="manifest" href="/path/to/manifest.json">
+ <link rel="icon" href="icon-192.png" type="image/png">
+<link rel="apple-touch-icon" href="icon-512.png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>campus-connect-capture</title>
