--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<link rel="manifest" href="/path/to/manifest.json">
- <link rel="icon" href="icon-192.png" type="image/png">
-<link rel="apple-touch-icon" href="icon-512.png">
+<!-- Web App capable (critical for iOS) -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+
+<!-- iOS Status Bar styling -->
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+<!-- iOS App title (shown on home screen) -->
+<meta name="apple-mobile-web-app-title" content="WSSMS">
+
+<!-- App icon for iOS -->
+<link rel="apple-touch-icon" href="/icon-192.png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>campus-connect-capture</title>
