--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<!-- Web App capable (critical for iOS) -->
-<meta name="apple-mobile-web-app-capable" content="yes">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#ffffff" />
 
-<!-- iOS Status Bar styling -->
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="/manifest.json" />
 
-<!-- iOS App title (shown on home screen) -->
-<meta name="apple-mobile-web-app-title" content="WSSMS">
+  <!-- Apple iOS Support -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="WSSMS" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
 
-<!-- App icon for iOS -->
-<link rel="apple-touch-icon" href="/icon-192.png">
+  <!-- Fallback favicon and title -->
+  <link rel="icon" href="/icon-192.png" />
+  <title>WSSMS</title>
+</head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>campus-connect-capture</title>
