--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#ffffff" />
-
+  
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
 
@@ -13,9 +13,17 @@
   <meta name="apple-mobile-web-app-title" content="WSSMS" />
   <link rel="apple-touch-icon" href="/icon-192.png" />
 
-  <!-- Fallback favicon and title -->
+  <!-- Favicon and Title -->
   <link rel="icon" href="/icon-192.png" />
   <title>WSSMS</title>
+
+  <!-- SEO / OG Metadata -->
+  <meta name="description" content="Lovable Generated Project" />
+  <meta name="author" content="Lovable" />
+  <meta property="og:title" content="WSSMS" />
+  <meta property="og:description" content="Lovable Generated Project" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 </head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
