--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <head>
+  <!-- Basic Setup -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#ffffff" />
-  
+  <title>WSSMS</title>
+
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
+
+  <!-- App Icons -->
+  <link rel="icon" href="/icon-192.png" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
 
   <!-- Apple iOS Support -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="WSSMS" />
-  <link rel="apple-touch-icon" href="/icon-192.png" />
 
-  <!-- Favicon and Title -->
-  <link rel="icon" href="/icon-192.png" />
-  <title>WSSMS</title>
+  <!-- PWA Display Settings -->
+  <meta name="mobile-web-app-capable" content="yes" />
 
-  <!-- SEO / OG Metadata -->
-  <meta name="description" content="Lovable Generated Project" />
-  <meta name="author" content="Lovable" />
+  <!-- Open Graph / Social Sharing -->
   <meta property="og:title" content="WSSMS" />
-  <meta property="og:description" content="Lovable Generated Project" />
+  <meta property="og:description" content="Woodstock Student Management System" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image" content="/icon-512.png" />
 </head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
