--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <head>
-  <!-- Basic Setup -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#ffffff" />
+
   <title>WSSMS</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
 
-  <!-- App Icons -->
-  <link rel="icon" href="/icon-192.png" />
+  <!-- Apple Touch Icon -->
   <link rel="apple-touch-icon" href="/icon-192.png" />
 
-  <!-- Apple iOS Support -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-  <meta name="apple-mobile-web-app-title" content="WSSMS" />
+  <!-- Description -->
+  <meta name="description" content="WSSMS - Woodstock School Student Management System" />
 
-  <!-- PWA Display Settings -->
-  <meta name="mobile-web-app-capable" content="yes" />
-
-  <!-- Open Graph / Social Sharing -->
+  <!-- Open Graph (Social Media Preview) -->
   <meta property="og:title" content="WSSMS" />
-  <meta property="og:description" content="Woodstock Student Management System" />
+  <meta property="og:description" content="Woodstock School Student Management System" />
+  <meta property="og:image" content="/icon-192.png" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/icon-512.png" />
+  <meta property="og:url" content="https://yourdomain.com" />
+
+  <!-- Optional: Add any stylesheets or fonts below -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
