--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Meta Configuration -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="WSSMS - Woodstock School Student Management System" />
-    <meta name="author" content="Lovable" />
+   <!-- Standard Favicon -->
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <!-- Title -->
-    <title>WSSMS</title>
+<!-- PNG Icons for various devices -->
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
-    <!-- Favicon and Icons -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
-    <link rel="apple-touch-icon" href="/icon-192.png" />
+<!-- Apple Touch Icon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
-    <!-- Web App Manifest -->
-    <link rel="manifest" href="/manifest.json" />
-
-    <!-- Open Graph Tags -->
-    <meta property="og:title" content="WSSMS" />
-    <meta property="og:description" content="Woodstock School Student Management System" />
-    <meta property="og:image" content="/icon-192.png" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourdomain.com" />
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <!-- Optional: Stylesheets -->
-    <link rel="stylesheet" href="styles.css" />
+<!-- Web Manifest -->
+<link rel="manifest" href="/manifest.json" />
   </head>
 
   <body>
