--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-   <!-- Standard Favicon -->
-<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="WSSMS - Woodstock School Student Management System" />
+    <meta name="author" content="Lovable" />
 
-<!-- PNG Icons for various devices -->
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <title>WSSMS</title>
 
-<!-- Apple Touch Icon -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <!-- Standard Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-<!-- Web Manifest -->
-<link rel="manifest" href="/manifest.json" />
+    <!-- PNG Icons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- Web Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Social Sharing -->
+    <meta property="og:title" content="WSSMS" />
+    <meta property="og:description" content="Woodstock School Student Management System" />
+    <meta property="og:image" content="/icon-192.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <div id="root"></div>
 
-    <!-- GPT Script -->
+    <!-- GPT Engine -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+
+    <!-- Main Application Script -->
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- Service Worker -->
+    <!-- PWA Service Worker -->
     <script>
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker
-          .register('/service-worker.js')
+        navigator.serviceWorker.register('/service-worker.js')
           .then(() => console.log('Service Worker Registered'))
           .catch(error => console.log('Service Worker Registration Failed:', error));
       }
