--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,20 @@
 
     <title>WSSMS</title>
 
-    <!-- Standard Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-
-    <!-- PNG Icons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
 
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
-    <!-- Web Manifest -->
+    <!-- Manifest -->
     <link rel="manifest" href="/manifest.json" />
 
-    <!-- Social Sharing -->
+    <!-- Open Graph -->
     <meta property="og:title" content="WSSMS" />
     <meta property="og:description" content="Woodstock School Student Management System" />
-    <meta property="og:image" content="/icon-192.png" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="/icon-192.png" />
     <meta property="og:url" content="https://yourdomain.com" />
 
     <!-- Twitter Card -->
@@ -34,20 +30,20 @@
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="styles.css" />
+    <!-- Styles -->
+    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
     <div id="root"></div>
 
-    <!-- GPT Engine -->
+    <!-- GPT Engineer Script -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
 
-    <!-- Main Application Script -->
+    <!-- App Entry Point -->
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- PWA Service Worker -->
+    <!-- Service Worker -->
     <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/service-worker.js')
