--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="root"></div>
 
     <!-- Vite React Entry Point -->
-    <script type="module" src="/src/components/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
 
     <!-- Register Service Worker for PWA -->
     <script>
