--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <!-- Manifest for PWA -->
+    <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
 
-    <!-- iOS PWA Meta Tags -->
+    <!-- iOS PWA Support -->
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="WSSMS" />
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
 
-    <!-- Optional: Theme color -->
+    <!-- Theme Color (affects the iOS status bar color) -->
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
